--- a/src/Hjmos.BaseControls/Themes/Basic/Converters.xaml
+++ b/src/Hjmos.BaseControls/Themes/Basic/Converters.xaml
@@ -31,4 +31,5 @@
     <converter:Long2FileSizeConverter x:Key="Long2FileSizeConverter" />
     <converter:Object2BooleanConverter x:Key="Object2BooleanConverter" />
     <converter:ThicknessSplitConverter x:Key="ThicknessSplitConverter" />
+    <converter:HundredFoldConverter x:Key="HundredFoldConverter" />
 </ResourceDictionary>
