--- a/src/Hjmos.BaseControls/Themes/Styles/DesignSurface.xaml
+++ b/src/Hjmos.BaseControls/Themes/Styles/DesignSurface.xaml
@@ -2,14 +2,16 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:controls="clr-namespace:Hjmos.BaseControls.Controls">
-    <!--<ResourceDictionary.MergedDictionaries>
+    <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="ZoomScrollViewer.xaml" />
-    </ResourceDictionary.MergedDictionaries>-->
+    </ResourceDictionary.MergedDictionaries>
 
     <Style TargetType="controls:DesignSurface">
         <Setter Property="Background" Value="Red" />
         <Setter Property="BorderBrush" Value="SeaGreen" />
         <Setter Property="BorderThickness" Value="1" />
+        <Setter Property="IsTabStop" Value="False" />
+        <Setter Property="Focusable" Value="False" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="controls:DesignSurface">
@@ -18,6 +20,7 @@
                         AlwaysShowZoomButtons="True"
                         HorizontalScrollBarVisibility="Visible"
                         MinimumZoom="1"
+                        MouseWheelZoom="false"
                         VerticalScrollBarVisibility="Visible">
                         <ContentControl x:Name="PART_MainContent">
                             <ContentPresenter />
