--- a/src/Hjmos.BaseControls/Themes/Styles/ZoomScrollViewer.xaml
+++ b/src/Hjmos.BaseControls/Themes/Styles/ZoomScrollViewer.xaml
@@ -2,8 +2,33 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:controls="clr-namespace:Hjmos.BaseControls.Controls">
+
     <!--  滚动条样式  -->
     <Style TargetType="{x:Type controls:ZoomScrollViewer}">
+        <Setter Property="IsTabStop" Value="False" />
+        <Setter Property="FocusVisualStyle" Value="{x:Null}" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type controls:ZoomScrollViewer}">
+                    <Grid Background="{TemplateBinding Panel.Background}">
+                        <ScrollContentPresenter
+                            Name="PART_Presenter"
+                            Margin="{TemplateBinding Control.Padding}"
+                            CanContentScroll="{TemplateBinding ScrollViewer.CanContentScroll}"
+                            Content="{TemplateBinding ContentControl.Content}"
+                            ContentTemplate="{TemplateBinding ContentControl.ContentTemplate}">
+                            <ScrollContentPresenter.LayoutTransform>
+                                <ScaleTransform ScaleX="{Binding Path=CurrentZoom, RelativeSource={RelativeSource Mode=TemplatedParent}}" ScaleY="{Binding Path=CurrentZoom, RelativeSource={RelativeSource Mode=TemplatedParent}}" />
+                            </ScrollContentPresenter.LayoutTransform>
+                        </ScrollContentPresenter>
+                    </Grid>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <!--  滚动条样式  -->
+    <!--<Style TargetType="{x:Type controls:ZoomScrollViewer}">
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type controls:ZoomScrollViewer}">
@@ -93,5 +118,5 @@
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
-    </Style>
+    </Style>-->
 </ResourceDictionary>
