--- a/Tests/Controltest/UserControl1.xaml
+++ b/Tests/Controltest/UserControl1.xaml
@@ -1,61 +1,166 @@
-﻿<UserControl x:Class="Controltest.UserControl1"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:controls="clr-namespace:Hjmos.BaseControls.Controls;assembly=Hjmos.BaseControls"
-             mc:Ignorable="d" Height="245" Width="329.916"
-            >
+﻿<UserControl
+    x:Class="Controltest.UserControl1"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:controls="clr-namespace:Hjmos.BaseControls.Controls;assembly=Hjmos.BaseControls"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Style="{StaticResource DirectionUserControlStyle}"
+    mc:Ignorable="d">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="1*"/>
-            <RowDefinition Height="2*"/>
-            <RowDefinition Height="2*"/>
+            <RowDefinition Height="1*" />
+            <RowDefinition Height="2*" />
+            <RowDefinition Height="2*" />
         </Grid.RowDefinitions>
-        <StackPanel Orientation="Horizontal" Grid.Row="0" HorizontalAlignment="Left">
-            <Button x:Name="PART_Switch"   Content="切换" FontSize="10" Foreground="#2FA7BA " BorderThickness="0" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-            <TextBlock Text="广州" FontSize="15" Foreground="#30FFFF" Margin="5" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <StackPanel
+            Grid.Row="0"
+            HorizontalAlignment="Left"
+            Orientation="Horizontal">
+            <Button
+                x:Name="PART_Switch"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Center"
+                BorderThickness="0"
+                Content="切换"
+                FontSize="10"
+                Foreground="#2FA7BA " />
+            <TextBlock
+                Margin="5"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
+                FontSize="15"
+                Foreground="#30FFFF"
+                Text="广州" />
         </StackPanel>
-        <TextBlock Grid.Row="0" Text="4分钟之前更新" FontSize="10" Foreground="#8AB5BC" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="10,0"/>
-        <Border Grid.Row="1" BorderBrush="#1A8392" BorderThickness="0,0,0,1" >
+        <TextBlock
+            Grid.Row="0"
+            Margin="10,0"
+            HorizontalAlignment="Right"
+            VerticalAlignment="Center"
+            FontSize="10"
+            Foreground="#8AB5BC"
+            Text="4分钟之前更新" />
+        <Border
+            Grid.Row="1"
+            BorderBrush="#1A8392"
+            BorderThickness="0,0,0,1">
             <Grid>
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition/>
-                    <ColumnDefinition/>
+                    <ColumnDefinition />
+                    <ColumnDefinition />
                 </Grid.ColumnDefinitions>
-                <StackPanel Orientation="Horizontal" Grid.Column="0" HorizontalAlignment="Left" Margin="10,0,0,0" >
-                    <controls:ImageViewer ImageSource="pack://application:,,,/Controltest;component/image/太阳.svg"  Width="35" HorizontalAlignment="Center"/>
-                    <TextBlock Text="晴" FontSize="10" Foreground="White" VerticalAlignment="Center" Margin="10,0,0,0" />
-                    <TextBlock Text="/20℃" FontSize="10" Foreground="White" VerticalAlignment="Center"/>
+                <StackPanel
+                    Grid.Column="0"
+                    Margin="10,0,0,0"
+                    HorizontalAlignment="Left"
+                    Orientation="Horizontal">
+                    <controls:ImageViewer
+                        Width="35"
+                        HorizontalAlignment="Center"
+                        ImageSource="pack://application:,,,/Controltest;component/image/太阳.svg" />
+                    <TextBlock
+                        Margin="10,0,0,0"
+                        VerticalAlignment="Center"
+                        FontSize="10"
+                        Foreground="White"
+                        Text="晴" />
+                    <TextBlock
+                        VerticalAlignment="Center"
+                        FontSize="10"
+                        Foreground="White"
+                        Text="/20℃" />
                 </StackPanel>
-                <controls:ImageViewer ImageSource="pack://application:,,,/Controltest;component/image/水滴.svg" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="10"  Width="25"/>
+                <controls:ImageViewer
+                    Grid.Column="1"
+                    Width="25"
+                    Margin="10"
+                    HorizontalAlignment="Right"
+                    VerticalAlignment="Center"
+                    ImageSource="pack://application:,,,/Controltest;component/image/水滴.svg" />
             </Grid>
         </Border>
         <Grid Grid.Row="2">
             <Grid.Background>
-                <ImageBrush/>
+                <ImageBrush />
             </Grid.Background>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="auto"/>
-                <ColumnDefinition Width="0.5*"/>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="0.5*"/>
-                
-                <ColumnDefinition Width="auto"/>
+                <ColumnDefinition Width="auto" />
+                <ColumnDefinition Width="0.5*" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="0.5*" />
+
+                <ColumnDefinition Width="auto" />
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
-                <RowDefinition/>
-                <RowDefinition/>
+                <RowDefinition />
+                <RowDefinition />
             </Grid.RowDefinitions>
-            <TextBlock  Grid.Row="0" Grid.Column="0" Text="东北风" Margin="0,10" FontSize="10" Foreground="#C0FFFC" HorizontalAlignment="Left"/>
-            <TextBlock  Grid.Row="0" Grid.Column="2" Text="2级" Margin="10" FontSize="10" Foreground="#C0FFFC" HorizontalAlignment="Left"/>
-            <TextBlock  Grid.Row="0" Grid.Column="3" Text="降水量" Margin="10" FontSize="10" Foreground="#C0FFFC" HorizontalAlignment="Left"/>
-            <TextBlock  Grid.Row="0" Grid.Column="5" Text="0.0mm" Margin="0,10" FontSize="10" Foreground="#C0FFFC" HorizontalAlignment="Left"/>
-            <TextBlock  Grid.Row="1" Grid.Column="0" Text="温度" Margin="0,10"  FontSize="10" Foreground="#C0FFFC" HorizontalAlignment="Left"/>
-            <TextBlock  Grid.Row="1" Grid.Column="2" Text="46%" Margin="10" FontSize="10" Foreground="#C0FFFC" HorizontalAlignment="Left"/>
-            <TextBlock  Grid.Row="1" Grid.Column="3" Text="大气压强" Margin="10" FontSize="10" Foreground="#C0FFFC" HorizontalAlignment="Left"/>
-            <TextBlock  Grid.Row="1" Grid.Column="5" Text="1010hpa" Margin="0,10" FontSize="10" Foreground="#C0FFFC" HorizontalAlignment="Left"/>
+            <TextBlock
+                Grid.Row="0"
+                Grid.Column="0"
+                Margin="0,10"
+                HorizontalAlignment="Left"
+                FontSize="10"
+                Foreground="#C0FFFC"
+                Text="东北风" />
+            <TextBlock
+                Grid.Row="0"
+                Grid.Column="2"
+                Margin="10"
+                HorizontalAlignment="Left"
+                FontSize="10"
+                Foreground="#C0FFFC"
+                Text="2级" />
+            <TextBlock
+                Grid.Row="0"
+                Grid.Column="3"
+                Margin="10"
+                HorizontalAlignment="Left"
+                FontSize="10"
+                Foreground="#C0FFFC"
+                Text="降水量" />
+            <TextBlock
+                Grid.Row="0"
+                Grid.Column="5"
+                Margin="0,10"
+                HorizontalAlignment="Left"
+                FontSize="10"
+                Foreground="#C0FFFC"
+                Text="0.0mm" />
+            <TextBlock
+                Grid.Row="1"
+                Grid.Column="0"
+                Margin="0,10"
+                HorizontalAlignment="Left"
+                FontSize="10"
+                Foreground="#C0FFFC"
+                Text="温度" />
+            <TextBlock
+                Grid.Row="1"
+                Grid.Column="2"
+                Margin="10"
+                HorizontalAlignment="Left"
+                FontSize="10"
+                Foreground="#C0FFFC"
+                Text="46%" />
+            <TextBlock
+                Grid.Row="1"
+                Grid.Column="3"
+                Margin="10"
+                HorizontalAlignment="Left"
+                FontSize="10"
+                Foreground="#C0FFFC"
+                Text="大气压强" />
+            <TextBlock
+                Grid.Row="1"
+                Grid.Column="5"
+                Margin="0,10"
+                HorizontalAlignment="Left"
+                FontSize="10"
+                Foreground="#C0FFFC"
+                Text="1010hpa" />
         </Grid>
     </Grid>
 </UserControl>
