--- a/Tests/Controltest/Window11.xaml
+++ b/Tests/Controltest/Window11.xaml
@@ -1,14 +1,14 @@
 ﻿<Window
-    x:Class="Controltest.Window9"
+    x:Class="Controltest.Window11"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:controls="clr-namespace:Hjmos.BaseControls.Controls;assembly=Hjmos.BaseControls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:Controltest"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    Title="Window9"
-    Width="1200"
-    Height="600"
+    Title="Window11"
+    Width="800"
+    Height="450"
     mc:Ignorable="d">
     <Grid>
         <Grid.Resources>
@@ -16,60 +16,25 @@
             <DataTemplate x:Key="ChangeStationStyle">
                 <Grid>
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="40" />
-                        <ColumnDefinition Width="40" />
+                        <ColumnDefinition Width="auto" />
                         <ColumnDefinition Width="180" />
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="42" />
-                        <RowDefinition Height="42" />
-                        <RowDefinition Height="22" />
+                        <RowDefinition Height="40" />
+                        <RowDefinition Height="40" />
+                        <RowDefinition Height="auto" />
+                        <RowDefinition Height="40" />
                         <RowDefinition Height="40" />
                     </Grid.RowDefinitions>
-                    <!--<Rectangle
-                        Grid.Row="1"
-                        Grid.Column="1"
-                        Grid.ColumnSpan="2"
-                        Height="6"
-                        Margin="0,0,-40,0"
-                        Panel.ZIndex="0"
-                        Fill="#FF0075C1"
-                        StrokeThickness="0"
-                        Visibility="{Binding IsLast, Converter={StaticResource Boolean2VisibilityReConverter}}" />-->
-
                     <StackPanel
                         x:Name="stackpanel"
                         Grid.Row="0"
                         Grid.Column="0"
                         Grid.ColumnSpan="2"
-                        Margin="-200,-170,-200,0">
-
-                        <!--<local:UserControl1 />-->
-                    </StackPanel>
-
-                    <!--<WindowsFormsHost
-                        x:Name="windowsform"
-                        Grid.Row="0"
-                        Grid.Column="0"
-                        Grid.ColumnSpan="2"
-                        Width="200"
-                        Height="200" />-->
-
-                    <!--<local:UserControl1
-                        Grid.Row="0"
-                        Grid.Column="0"
-                        Grid.ColumnSpan="2"
-                        Width="300"
-                        Height="200"
-                        Margin="-200,-300,-200,0"
-                        Background="Black"
-                        Visibility="{Binding IsShow, Converter={StaticResource Boolean2VisibilityConverter}}" />-->
-
+                        Margin="-200,-170,-200,0" />
                     <controls:SimplePanel
-                        Grid.Row="0"
-                        Grid.Column="0"
-                        Grid.ColumnSpan="2"
-                        HorizontalAlignment="Center"
+                        Grid.Row="1"
+                        HorizontalAlignment="Left"
                         VerticalAlignment="Bottom">
                         <Path
                             Width="27"
@@ -86,22 +51,14 @@
                             CommandParameter="{Binding ElementName=stackpanel}"
                             Foreground="Green"
                             Style="{StaticResource ButtonIcon}" />
-                        <!--<Path
-                            Width="16"
-                            Height="16"
-                            Margin="0,0,0,5"
-                            Data="{StaticResource FloodGeometry}"
-                            Fill="Green"
-                            Stretch="Uniform" />-->
                     </controls:SimplePanel>
                     <controls:SimplePanel
-                        Grid.Row="1"
-                        Grid.Column="0"
-                        Grid.ColumnSpan="2"
+                        Grid.Row="2"
                         Width="32"
                         Height="32"
                         Margin="0,5"
-                        HorizontalAlignment="Center">
+                        HorizontalAlignment="Left"
+                        VerticalAlignment="Center">
                         <Ellipse Fill="Blue" />
                         <Path
                             Margin="2"
@@ -110,25 +67,29 @@
                             Stretch="Uniform" />
                     </controls:SimplePanel>
                     <TextBlock
-                        Grid.Row="2"
-                        Grid.Column="0"
-                        Grid.ColumnSpan="3"
+                        Grid.Row="3"
+                        Grid.ColumnSpan="2"
                         HorizontalAlignment="Left"
                         FontSize="18"
                         Foreground="Black"
                         Text="{Binding StationName}">
                         <TextBlock.Margin>
-                            <MultiBinding Converter="{StaticResource PositionMultiConverter}" ConverterParameter="40">
+                            <MultiBinding Converter="{StaticResource PositionMultiConverter}" ConverterParameter="16">
                                 <Binding Path="ActualWidth" RelativeSource="{RelativeSource Mode=Self}" />
                             </MultiBinding>
                         </TextBlock.Margin>
                     </TextBlock>
                     <StackPanel
-                        Grid.Row="3"
-                        Grid.Column="0"
-                        Grid.ColumnSpan="2"
-                        HorizontalAlignment="Center"
+                        Grid.Row="4"
+                        Grid.ColumnSpan="1"
+                        HorizontalAlignment="Left"
+                        VerticalAlignment="Top"
                         Orientation="Horizontal">
+                        <StackPanel.Margin>
+                            <MultiBinding Converter="{StaticResource PositionMultiConverter}" ConverterParameter="16">
+                                <Binding Path="ActualWidth" RelativeSource="{RelativeSource Mode=Self}" />
+                            </MultiBinding>
+                        </StackPanel.Margin>
                         <Border
                             Width="20"
                             Height="20"
@@ -159,57 +120,26 @@
                                 Text="1" />
                         </Border>
                     </StackPanel>
-
-                    <!--<controls:SimplePanel
-                            Grid.Row="0"
-                            Grid.Column="2"
-                            HorizontalAlignment="Left"
-                            VerticalAlignment="Top">
-                            <Path
-                                Width="27"
-                                Height="32"
-                                Data="{StaticResource LocationGeometry}"
-                                Fill="#FF353D46"
-                                Stretch="Uniform" />
-                            <Path
-                                Width="16"
-                                Height="16"
-                                Margin="0,0,0,5"
-                                Data="{StaticResource FloodGeometry}"
-                                Fill="Green"
-                                Stretch="Uniform" />
-                        </controls:SimplePanel>-->
                 </Grid>
             </DataTemplate>
 
             <DataTemplate x:Key="DefaultStyle">
                 <Grid>
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="40" />
-                        <ColumnDefinition Width="40" />
+                        <ColumnDefinition Width="auto" />
                         <ColumnDefinition Width="180" />
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="42" />
-                        <RowDefinition Height="42" />
-                        <RowDefinition Height="22" />
+                        <RowDefinition Height="40" />
+                        <RowDefinition Height="40" />
+                        <RowDefinition Height="40" />
+                        <RowDefinition Height="40" />
                         <RowDefinition Height="40" />
                     </Grid.RowDefinitions>
-                    <!--<Rectangle
-                        Grid.Row="1"
-                        Grid.Column="1"
-                        Grid.ColumnSpan="2"
-                        Height="6"
-                        Margin="0,0,-40,0"
-                        Panel.ZIndex="0"
-                        Fill="#FF0075C1"
-                        StrokeThickness="0"
-                        Visibility="{Binding IsLast, Converter={StaticResource Boolean2VisibilityReConverter}}" />-->
+
                     <controls:SimplePanel
-                        Grid.Row="0"
-                        Grid.Column="0"
-                        Grid.ColumnSpan="2"
-                        HorizontalAlignment="Center"
+                        Grid.Row="1"
+                        HorizontalAlignment="Left"
                         VerticalAlignment="Bottom">
                         <Path
                             Width="27"
@@ -224,94 +154,28 @@
                             controls:IconElement.Width="16"
                             Foreground="Green"
                             Style="{StaticResource ButtonIcon}" />
-                        <!--<Path
-                            Width="16"
-                            Height="16"
-                            Margin="0,0,0,5"
-                            Data="{StaticResource FloodGeometry}"
-                            Fill="Green"
-                            Stretch="Uniform" />-->
                     </controls:SimplePanel>
                     <Ellipse
-                        Grid.Row="1"
-                        Grid.Column="0"
-                        Grid.ColumnSpan="2"
+                        Grid.Row="2"
                         Width="24"
                         Height="24"
                         Margin="0,5"
-                        HorizontalAlignment="Center"
+                        HorizontalAlignment="Left"
+                        VerticalAlignment="Center"
                         Fill="Blue" />
-
                     <TextBlock
-                        Grid.Row="2"
-                        Grid.Column="0"
-                        Grid.ColumnSpan="3"
+                        Grid.Row="3"
+                        Grid.ColumnSpan="2"
                         HorizontalAlignment="Left"
                         FontSize="18"
                         Foreground="Black"
                         Text="{Binding StationName}">
                         <TextBlock.Margin>
-                            <MultiBinding Converter="{StaticResource PositionMultiConverter}" ConverterParameter="40">
+                            <MultiBinding Converter="{StaticResource PositionMultiConverter}" ConverterParameter="12">
                                 <Binding Path="ActualWidth" RelativeSource="{RelativeSource Mode=Self}" />
                             </MultiBinding>
                         </TextBlock.Margin>
                     </TextBlock>
-                    <!--<StackPanel
-                        Grid.Row="3"
-                        Grid.Column="0"
-                        Grid.ColumnSpan="2"
-                        HorizontalAlignment="Center"
-                        Orientation="Horizontal">
-                        <Border
-                            Width="20"
-                            Height="20"
-                            Background="Blue">
-                            <TextBlock
-                                HorizontalAlignment="Center"
-                                VerticalAlignment="Center"
-                                FontSize="14"
-                                Foreground="White"
-                                Text="6" />
-                        </Border>
-                        <Path
-                            Width="10"
-                            Height="16"
-                            Margin="10,0"
-                            Data="{StaticResource Triangle3}"
-                            Fill="Black"
-                            Stretch="Uniform" />
-                        <Border
-                            Width="20"
-                            Height="20"
-                            Background="Pink">
-                            <TextBlock
-                                HorizontalAlignment="Center"
-                                VerticalAlignment="Center"
-                                FontSize="14"
-                                Foreground="White"
-                                Text="1" />
-                        </Border>
-                    </StackPanel>-->
-
-                    <!--<controls:SimplePanel
-                            Grid.Row="0"
-                            Grid.Column="2"
-                            HorizontalAlignment="Left"
-                            VerticalAlignment="Top">
-                            <Path
-                                Width="27"
-                                Height="32"
-                                Data="{StaticResource LocationGeometry}"
-                                Fill="#FF353D46"
-                                Stretch="Uniform" />
-                            <Path
-                                Width="16"
-                                Height="16"
-                                Margin="0,0,0,5"
-                                Data="{StaticResource FloodGeometry}"
-                                Fill="Green"
-                                Stretch="Uniform" />
-                        </controls:SimplePanel>-->
                 </Grid>
             </DataTemplate>
         </Grid.Resources>
@@ -329,7 +193,7 @@
             HorizontalAlignment="Center"
             Background="Red">
             <controls:CustomItemControl
-                Margin="20"
+                Margin="50"
                 VerticalAlignment="Center"
                 ItemsSource="{Binding itemsSource}"
                 Style="{StaticResource CustomItemsControl}">
