--- a/src/Hjmos.BaseControls/Themes/Styles/UserControl.xaml
+++ b/src/Hjmos.BaseControls/Themes/Styles/UserControl.xaml
@@ -3,13 +3,11 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:controls="clr-namespace:Hjmos.BaseControls.Controls">
 
-
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="Loading.xaml" />
-        <ResourceDictionary Source="../Basic/Converters.xaml"/>
-        <ResourceDictionary Source="../Basic/Geometries.xaml"/>
+        <ResourceDictionary Source="../Basic/Converters.xaml" />
+        <ResourceDictionary Source="../Basic/Geometries.xaml" />
     </ResourceDictionary.MergedDictionaries>
-
 
     <!--<Style x:Key="PopupUserControlStyle" TargetType="controls:PopupUserControl">
 
@@ -73,5 +71,47 @@
         </Setter>
     </Style>
 
-
+    <Style x:Key="DirectionUserControlStyle" TargetType="UserControl">
+        <Setter Property="Focusable" Value="False" />
+        <Setter Property="BorderThickness" Value="1" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="UserControl">
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition />
+                            <RowDefinition Height="8" />
+                        </Grid.RowDefinitions>
+                        <Border
+                            x:Name="PART_Triangle"
+                            Grid.Row="0"
+                            Grid.RowSpan="2"
+                            Width="30"
+                            Height="30"
+                            HorizontalAlignment="Center"
+                            VerticalAlignment="Bottom"
+                            Background="#FF144062"
+                            RenderTransformOrigin="0.5,0.5"
+                            Visibility="Visible">
+                            <Border.RenderTransform>
+                                <TransformGroup>
+                                    <TranslateTransform X="5" Y="5" />
+                                    <RotateTransform Angle="45" />
+                                </TransformGroup>
+                            </Border.RenderTransform>
+                        </Border>
+                        <Border
+                            x:Name="PART_Content"
+                            Grid.Row="0"
+                            MinHeight="30"
+                            Background="#FF144062"
+                            BorderBrush="Red"
+                            BorderThickness="{TemplateBinding BorderThickness}">
+                            <ContentPresenter SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" />
+                        </Border>
+                    </Grid>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
 </ResourceDictionary>
