--- a/src/Hjmos.BaseControls/Themes/Styles/ZoomBox.xaml
+++ b/src/Hjmos.BaseControls/Themes/Styles/ZoomBox.xaml
@@ -10,15 +10,15 @@
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type controls:ZoomBox}">
                     <Border
-                        Background="#EEE"
+                        Background="Gray"
                         BorderBrush="DimGray"
                         BorderThickness="0"
                         CornerRadius="1">
                         <Grid>
-                            <Canvas Name="PART_ZoomCanvas" Margin="5">
-                                <Canvas.Background>
-                                    <VisualBrush Stretch="Uniform" Visual="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=ScrollViewer.Content}" />
-                                </Canvas.Background>
+                            <Canvas Name="PART_ZoomCanvas">
+                                <!--<Canvas.Background>
+                                    <VisualBrush Stretch="Uniform" Visual="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=ContentControl}" />
+                                </Canvas.Background>-->
                                 <Thumb Name="PART_ZoomThumb" Cursor="SizeAll">
                                     <Thumb.Style>
                                         <Style TargetType="Thumb">
