--- a/Tests/Controltest/Window12.xaml
+++ b/Tests/Controltest/Window12.xaml
@@ -10,8 +10,159 @@
     Title="Window12"
     Width="800"
     Height="450"
+    Background="#FF144062"
     mc:Ignorable="d">
+
     <Grid>
+        <Grid.Resources>
+            <Style x:Key="ButtonStyle1" TargetType="ToggleButton">
+                <Setter Property="controls:BorderElement.CornerRadius" Value="0" />
+                <Setter Property="BorderThickness" Value="0" />
+                <Setter Property="BorderBrush" Value="Black" />
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="ToggleButton">
+                            <Border
+                                Background="{TemplateBinding Background}"
+                                BorderBrush="{TemplateBinding BorderBrush}"
+                                BorderThickness="{TemplateBinding BorderThickness}"
+                                CornerRadius="{TemplateBinding controls:BorderElement.CornerRadius}" />
+                            <ControlTemplate.Triggers>
+                                <Trigger Property="IsChecked" Value="True">
+                                    <Setter Property="BorderThickness" Value="2" />
+                                </Trigger>
+                            </ControlTemplate.Triggers>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+            </Style>
+            <Style x:Key="ButtonStyle2" TargetType="ToggleButton">
+                <Setter Property="controls:BorderElement.CornerRadius" Value="0" />
+                <Setter Property="BorderThickness" Value="0" />
+                <Setter Property="BorderBrush" Value="Black" />
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="ToggleButton">
+                            <Border
+                                Background="{TemplateBinding Background}"
+                                BorderBrush="{TemplateBinding BorderBrush}"
+                                BorderThickness="{TemplateBinding BorderThickness}"
+                                CornerRadius="{TemplateBinding controls:BorderElement.CornerRadius}">
+                                <Path
+                                    Margin="2"
+                                    Data="{StaticResource ChangeGeometry}"
+                                    Fill="White"
+                                    Stretch="Uniform" />
+                            </Border>
+                            <ControlTemplate.Triggers>
+                                <Trigger Property="IsChecked" Value="True">
+                                    <Setter Property="BorderThickness" Value="2" />
+                                </Trigger>
+                            </ControlTemplate.Triggers>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+            </Style>
+
+            <Style x:Key="ButtonStyle3" TargetType="Button">
+                <Setter Property="controls:BorderElement.CornerRadius" Value="0" />
+                <Setter Property="BorderThickness" Value="0" />
+                <Setter Property="Background" Value="Transparent" />
+                <Setter Property="Foreground" Value="White" />
+
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="Button">
+                            <controls:SimplePanel>
+                                <Border
+                                    Background="{TemplateBinding Background}"
+                                    BorderBrush="{TemplateBinding BorderBrush}"
+                                    BorderThickness="{TemplateBinding BorderThickness}"
+                                    CornerRadius="{TemplateBinding controls:BorderElement.CornerRadius}">
+                                    <StackPanel
+                                        HorizontalAlignment="Left"
+                                        VerticalAlignment="Center"
+                                        Orientation="Horizontal">
+                                        <Path
+                                            x:Name="PathMain"
+                                            Width="{TemplateBinding controls:IconElement.Width}"
+                                            Height="{TemplateBinding controls:IconElement.Height}"
+                                            Data="{TemplateBinding controls:IconElement.Geometry}"
+                                            Fill="#FF1BB3E8"
+                                            SnapsToDevicePixels="True"
+                                            Stretch="Uniform" />
+                                        <ContentPresenter
+                                            x:Name="ContentPresenterMain"
+                                            Margin="6,0,0,0"
+                                            VerticalAlignment="Center"
+                                            RecognizesAccessKey="True"
+                                            SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" />
+                                    </StackPanel>
+                                </Border>
+                            </controls:SimplePanel>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+            </Style>
+        </Grid.Resources>
+
+        <!--<Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="176*" />
+                <ColumnDefinition Width="432*" />
+            </Grid.ColumnDefinitions>
+            <TreeView
+                controls:BackgroundSwitchElement.ItemSelectedBackground="Transparent"
+                controls:BackgroundSwitchElement.MouseHoverBackground="#FF0D4669"
+                Background="Transparent"
+                BorderThickness="0"
+                ItemsSource="{Binding VideoInfos}"
+                ScrollViewer.HorizontalScrollBarVisibility="Auto"
+                ScrollViewer.VerticalScrollBarVisibility="Auto"
+                Style="{StaticResource TreeViewBaseStyle}">
+                <TreeView.ItemContainerStyle>
+                    <Style BasedOn="{StaticResource TreeViewItemBaseStyle}" TargetType="TreeViewItem">
+                        <Setter Property="IsExpanded" Value="False" />
+                        <Setter Property="Foreground" Value="White" />
+                        <Setter Property="Background" Value="Transparent" />
+                        <Setter Property="Margin" Value="0,2" />
+                    </Style>
+                </TreeView.ItemContainerStyle>
+                <TreeView.ItemTemplate>
+                    <HierarchicalDataTemplate ItemsSource="{Binding VideoInfos}">
+                        <Button
+                            controls:IconElement.Geometry="{StaticResource Location1Geometry}"
+                            controls:IconElement.Height="14"
+                            controls:IconElement.Width="14"
+                            Content="{Binding Name}"
+                            Style="{StaticResource ButtonStyle3}" />
+        -->
+        <!--<StackPanel Orientation="Horizontal">
+                            <Path
+                                Width="14"
+                                Height="14"
+                                Fill="#FF1BB3E8"
+                                Data="{StaticResource GunCameraGeometry}"
+                                Stretch="Uniform" VerticalAlignment="Center" Margin="10,0" />
+                            <TextBlock
+                                VerticalAlignment="Center"
+                                FontSize="14"
+                                Text="{Binding Name}" />
+                        </StackPanel>-->
+        <!--
+                    </HierarchicalDataTemplate>
+                </TreeView.ItemTemplate>
+            </TreeView>
+        </Grid>-->
+
+        <ToggleButton
+            Width="24"
+            Height="24"
+            Margin="100,0,0,0"
+            VerticalAlignment="Center"
+            controls:BorderElement.CornerRadius="12"
+            Background="Green"
+            Style="{StaticResource ButtonStyle2}" />
         <Grid HorizontalAlignment="Center" VerticalAlignment="Center">
             <TextBlock FontSize="16">
                 <Run Foreground="White" Text="下行方向：" />
@@ -25,22 +176,51 @@
                 Background="Red">
                 <controls:SimplePanel Margin="50">
                     <lineflood:LineMap />
+
                     <lineflood:StationFloodSituation />
                     <lineflood:FloodGate />
                 </controls:SimplePanel>
             </controls:DesignSurface>
         </Grid>
 
-        <controls:ZoomBox
+        <!--<controls:ZoomBox
             x:Name="ZoomBox"
-            Grid.Row="1"
             Width="300"
             Height="88"
-            Margin="50"
+            Margin="0,0,93.333,10.667"
             HorizontalAlignment="Right"
             VerticalAlignment="Bottom"
-            DesignSurface="{Binding ElementName=designSurface}" />
+            DesignSurface="{Binding ElementName=designSurface}"
+            RenderTransformOrigin="0.406,0.936" />-->
 
-        <local:UserControl1 HorizontalAlignment="Left" VerticalAlignment="Top" />
+        <!--<local:UserControl1 HorizontalAlignment="Left" VerticalAlignment="Top" />-->
+
+        <controls:ZoomBox1
+            Width="300"
+            Height="88"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Bottom"
+            BorderThickness="0"
+            DesignSurface="{Binding ElementName=designSurface}"
+            Value="5 ">
+            <controls:ZoomBox1.Background>
+                <ImageBrush ImageSource="image/缩略图2.png" />
+            </controls:ZoomBox1.Background>
+
+            <controls:ZoomBox1.TargetContent>
+                <Border>
+                    <Border.Background>
+                        <ImageBrush ImageSource="image/缩略图1.png" />
+                    </Border.Background>
+                </Border>
+            </controls:ZoomBox1.TargetContent>
+            <controls:ZoomBox1.SourceContent>
+                <Border>
+                    <Border.Background>
+                        <ImageBrush ImageSource="image/缩略图1.png" />
+                    </Border.Background>
+                </Border>
+            </controls:ZoomBox1.SourceContent>
+        </controls:ZoomBox1>
     </Grid>
 </Window>
