--- a/src/Hjmos.BaseControls/Themes/Styles/ZoomBox.xaml
+++ b/src/Hjmos.BaseControls/Themes/Styles/ZoomBox.xaml
@@ -4,21 +4,101 @@
     xmlns:controls="clr-namespace:Hjmos.BaseControls.Controls"
     xmlns:converter="clr-namespace:Hjmos.BaseControls.Tools.Converter">
 
+    <Style x:Key="CompareSliderRepeatButtonTransparent" TargetType="RepeatButton">
+        <Setter Property="OverridesDefaultStyle" Value="true" />
+        <Setter Property="Background" Value="Transparent" />
+        <Setter Property="Focusable" Value="false" />
+        <Setter Property="IsTabStop" Value="false" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="RepeatButton">
+                    <ContentPresenter
+                        Width="{TemplateBinding ActualWidth}"
+                        Height="{TemplateBinding ActualHeight}"
+                        Content="{TemplateBinding Content}" />
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <ControlTemplate x:Key="ZoomBox1SliderHorizontal" TargetType="controls:ZoomBox1">
+        <Border
+            x:Name="border"
+            Background="{TemplateBinding Background}"
+            BorderBrush="{TemplateBinding BorderBrush}"
+            BorderThickness="{TemplateBinding BorderThickness}"
+            SnapsToDevicePixels="True">
+            <controls:ZoomBoxCompareTrack x:Name="PART_Track">
+                <Track.DecreaseRepeatButton>
+                    <RepeatButton Command="{x:Static Slider.DecreaseLarge}" Style="{StaticResource CompareSliderRepeatButtonTransparent}">
+                        <ContentPresenter
+                            Width="{TemplateBinding ActualWidth}"
+                            HorizontalAlignment="Left"
+                            ContentSource="TargetContent" />
+                    </RepeatButton>
+                </Track.DecreaseRepeatButton>
+                <Track.IncreaseRepeatButton>
+                    <RepeatButton Command="{x:Static Slider.IncreaseLarge}" Style="{StaticResource CompareSliderRepeatButtonTransparent}">
+                        <ContentPresenter
+                            Width="{TemplateBinding ActualWidth}"
+                            HorizontalAlignment="Right"
+                            ContentSource="SourceContent" />
+                    </RepeatButton>
+                </Track.IncreaseRepeatButton>
+                <Track.Thumb>
+                    <Thumb
+                        x:Name="PART_ZoomThumb"
+                        Width="150"
+                        Cursor="SizeAll">
+                        <Thumb.Style>
+                            <Style TargetType="Thumb">
+                                <Setter Property="Template">
+                                    <Setter.Value>
+                                        <ControlTemplate TargetType="Thumb">
+                                            <Rectangle
+                                                Fill="Transparent"
+                                                Stroke="Black"
+                                                StrokeThickness="0" />
+                                        </ControlTemplate>
+                                    </Setter.Value>
+                                </Setter>
+                            </Style>
+                        </Thumb.Style>
+                    </Thumb>
+                </Track.Thumb>
+            </controls:ZoomBoxCompareTrack>
+        </Border>
+    </ControlTemplate>
+
+    <Style TargetType="controls:ZoomBox1">
+        <Setter Property="Focusable" Value="False" />
+        <Setter Property="Stylus.IsPressAndHoldEnabled" Value="False" />
+        <Setter Property="Background" Value="Transparent" />
+        <Setter Property="BorderThickness" Value="1" />
+        <Setter Property="BorderBrush" Value="{DynamicResource BorderBrush}" />
+        <Setter Property="MinWidth" Value="30" />
+        <Setter Property="MinHeight" Value="30" />
+        <Setter Property="Template" Value="{StaticResource ZoomBox1SliderHorizontal}" />
+    </Style>
+
     <Style TargetType="{x:Type controls:ZoomBox}">
         <Setter Property="SnapsToDevicePixels" Value="true" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type controls:ZoomBox}">
                     <Border
-                        Background="Gray"
-                        BorderBrush="DimGray"
-                        BorderThickness="0"
+                        Background="Transparent"
+                        BorderBrush="#FF17557F"
+                        BorderThickness="1"
                         CornerRadius="1">
                         <Grid>
                             <Canvas Name="PART_ZoomCanvas">
                                 <!--<Canvas.Background>
                                     <VisualBrush Stretch="Uniform" Visual="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=ContentControl}" />
                                 </Canvas.Background>-->
+                                <Canvas.Background>
+                                    <ImageBrush ImageSource="/Hjmos.BaseControls;component/Resources/Image/缩略图.png" Stretch="Uniform" />
+                                </Canvas.Background>
                                 <Thumb Name="PART_ZoomThumb" Cursor="SizeAll">
                                     <Thumb.Style>
                                         <Style TargetType="Thumb">
