雷达图控件设计

--- a/Tests/Controltest/Window12.xaml
+++ b/Tests/Controltest/Window12.xaml
@@ -195,6 +195,13 @@
 
         <!--<local:UserControl1 HorizontalAlignment="Left" VerticalAlignment="Top" />-->
 
+        <controls:WaveProgressBar
+            Width="88"
+            Height="88"
+            HorizontalAlignment="Right"
+            VerticalAlignment="Bottom"
+            Value="50" />
+
         <controls:ZoomBox1
             Width="300"
             Height="88"
