--- a/src/Hjmos.BaseControls/Themes/Styles/ProgressBar.xaml
+++ b/src/Hjmos.BaseControls/Themes/Styles/ProgressBar.xaml
@@ -1,18 +1,20 @@
-﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                     xmlns:controls="clr-namespace:Hjmos.BaseControls.Controls">
+﻿<ResourceDictionary
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:controls="clr-namespace:Hjmos.BaseControls.Controls">
 
     <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="Base/ProgressBarBaseStyle.xaml"/>
+        <ResourceDictionary Source="Base/ProgressBarBaseStyle.xaml" />
     </ResourceDictionary.MergedDictionaries>
 
-
-    <Style TargetType="ProgressBar" BasedOn="{StaticResource ProgressBarBaseStyle}">
-        <Setter Property="Foreground" Value="{DynamicResource PrimaryBrush}"/>
+    <Style BasedOn="{StaticResource ProgressBarBaseStyle}" TargetType="ProgressBar">
+        <Setter Property="Foreground" Value="{DynamicResource PrimaryBrush}" />
     </Style>
 
-    <Style TargetType="controls:InfoProgressBar" BasedOn="{StaticResource InfoProgressBarStyle}">
-        <Setter Property="Foreground" Value="{DynamicResource PrimaryBrush}"/>
+    <Style BasedOn="{StaticResource InfoProgressBarStyle}" TargetType="controls:InfoProgressBar">
+        <Setter Property="Foreground" Value="{DynamicResource PrimaryBrush}" />
     </Style>
-    
+    <Style BasedOn="{StaticResource ProgressBarWaveBaseStyle}" TargetType="controls:WaveProgressBar">
+        <Setter Property="WaveFill" Value="{DynamicResource DarkPrimaryBrush}" />
+    </Style>
 </ResourceDictionary>
