--- a/Tests/WpfApp2/MainWindow.xaml
+++ b/Tests/WpfApp2/MainWindow.xaml
@@ -1,14 +1,43 @@
-﻿<Window x:Class="WpfApp2.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WpfApp2"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+﻿<Window
+    x:Class="WpfApp2.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:hc="clr-namespace:Hjmos.BaseControls.Controls;assembly=Hjmos.BaseControls"
+    xmlns:local="clr-namespace:WpfApp2"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Title="MainWindow"
+    Width="800"
+    Height="450"
+    mc:Ignorable="d">
     <Grid>
-        <Button Content="启动服务" HorizontalAlignment="Left" Margin="140,170,0,0" VerticalAlignment="Top" Click="Button_Click"/>
-        <Button Content="弹出" HorizontalAlignment="Left" Margin="260,170,0,0" VerticalAlignment="Top" Click="Button_Click_1"/>
+        <!--<Button Content="启动服务" HorizontalAlignment="Left" Margin="140,170,0,0" VerticalAlignment="Top" Click="Button_Click"/>
+        <Button Content="弹出" HorizontalAlignment="Left" Margin="260,170,0,0" VerticalAlignment="Top" Click="Button_Click_1"/>-->
+        <hc:SimplePanel>
+            <hc:DrawerMenu Name="DrawerLeft" HorizontalAlignment="Left">
+                <Border
+                    Width="300"
+                    Background="Gray"
+                    BorderThickness="0,1,0,0">
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition />
+                        </Grid.RowDefinitions>
+                        <TextBlock
+                            Margin="10,0,0,0"
+                            HorizontalAlignment="Left"
+                            Text="Header" />
+                    </Grid>
+                </Border>
+            </hc:DrawerMenu>
+            <!--<ToggleButton
+                Width="100"
+                Height="100"
+                HorizontalAlignment="Left"
+                Content="Left-Window"
+                IsChecked="{Binding IsOpen, ElementName=DrawerLeft}" />-->
+        </hc:SimplePanel>
 
     </Grid>
 </Window>
