--- a/src/Hjmos.BaseControls/Themes/Styles/Base/CardBaseStyle.xaml
+++ b/src/Hjmos.BaseControls/Themes/Styles/Base/CardBaseStyle.xaml
@@ -1,30 +1,51 @@
-﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:controls="clr-namespace:Hjmos.BaseControls.Controls">
+﻿<ResourceDictionary
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:controls="clr-namespace:Hjmos.BaseControls.Controls">
     <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="../../Basic/Converters.xaml"/>
+        <ResourceDictionary Source="../../Basic/Converters.xaml" />
     </ResourceDictionary.MergedDictionaries>
-    <Style TargetType="controls:Card" x:Key="CardBaseStyle">
-        <Setter Property="Background" Value="{DynamicResource RegionBrush}"/>
-        <Setter Property="BorderThickness" Value="1"/>
-        <Setter Property="BorderBrush" Value="{DynamicResource BorderBrush}"/>
+    <Style x:Key="CardBaseStyle" TargetType="controls:Card">
+        <Setter Property="Background" Value="{DynamicResource RegionBrush}" />
+        <Setter Property="BorderThickness" Value="1" />
+        <Setter Property="BorderBrush" Value="{DynamicResource BorderBrush}" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="controls:Card">
-                    <Border BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}"
-                            CornerRadius="{TemplateBinding controls:BorderElement.CornerRadius}">
+                    <Border
+                        Background="{TemplateBinding Background}"
+                        BorderBrush="{TemplateBinding BorderBrush}"
+                        BorderThickness="{TemplateBinding BorderThickness}"
+                        CornerRadius="{TemplateBinding controls:BorderElement.CornerRadius}">
                         <Grid>
                             <Grid.RowDefinitions>
-                                <RowDefinition Height="Auto"/>
+                                <RowDefinition Height="Auto" />
                                 <RowDefinition />
-                                <RowDefinition Height="Auto"/>
+                                <RowDefinition Height="Auto" />
                             </Grid.RowDefinitions>
-                            <Border BorderThickness="0,0,0,1" Visibility="{TemplateBinding Header,Converter={StaticResource Object2VisibilityConverter}}" BorderBrush="{TemplateBinding BorderBrush}">
-                                <ContentPresenter ContentSource="Header" ContentTemplate="{TemplateBinding HeaderTemplate}" ContentTemplateSelector="{TemplateBinding HeaderTemplateSelector}" ContentStringFormat="{TemplateBinding HeaderStringFormat}"/>
+                            <Border
+                                BorderBrush="{TemplateBinding BorderBrush}"
+                                BorderThickness="0,0,0,1"
+                                Visibility="{TemplateBinding Header,
+                                                             Converter={StaticResource Object2VisibilityConverter}}">
+                                <ContentPresenter
+                                    ContentSource="Header"
+                                    ContentStringFormat="{TemplateBinding HeaderStringFormat}"
+                                    ContentTemplate="{TemplateBinding HeaderTemplate}"
+                                    ContentTemplateSelector="{TemplateBinding HeaderTemplateSelector}" />
                             </Border>
-                            <ContentPresenter Grid.Row="1"/>
-                            <Border Grid.Row="2" BorderThickness="0,1,0,0" Visibility="{TemplateBinding Footer,Converter={StaticResource Object2VisibilityConverter}}" BorderBrush="{TemplateBinding BorderBrush}">
-                                <ContentPresenter ContentSource="Footer" ContentTemplate="{TemplateBinding FooterTemplate}" ContentTemplateSelector="{TemplateBinding FooterTemplateSelector}" ContentStringFormat="{TemplateBinding FooterStringFormat}"/>
+                            <ContentPresenter Grid.Row="1" />
+                            <Border
+                                Grid.Row="2"
+                                BorderBrush="{TemplateBinding BorderBrush}"
+                                BorderThickness="0,1,0,0"
+                                Visibility="{TemplateBinding Footer,
+                                                             Converter={StaticResource Object2VisibilityConverter}}">
+                                <ContentPresenter
+                                    ContentSource="Footer"
+                                    ContentStringFormat="{TemplateBinding FooterStringFormat}"
+                                    ContentTemplate="{TemplateBinding FooterTemplate}"
+                                    ContentTemplateSelector="{TemplateBinding FooterTemplateSelector}" />
                             </Border>
                         </Grid>
                     </Border>
