--- a/Tests/WpfApp2/MainWindow.xaml
+++ b/Tests/WpfApp2/MainWindow.xaml
@@ -14,23 +14,29 @@
         <!--<Button Content="启动服务" HorizontalAlignment="Left" Margin="140,170,0,0" VerticalAlignment="Top" Click="Button_Click"/>
         <Button Content="弹出" HorizontalAlignment="Left" Margin="260,170,0,0" VerticalAlignment="Top" Click="Button_Click_1"/>-->
         <hc:SimplePanel>
-            <hc:DrawerMenu Name="DrawerLeft" HorizontalAlignment="Left">
-                <Border
-                    Width="300"
-                    Background="Gray"
-                    BorderThickness="0,1,0,0">
-                    <Grid>
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="Auto" />
-                            <RowDefinition />
-                        </Grid.RowDefinitions>
-                        <TextBlock
-                            Margin="10,0,0,0"
-                            HorizontalAlignment="Left"
-                            Text="Header" />
-                    </Grid>
-                </Border>
+            <hc:DrawerMenu Name="DrawerLeft" >
+                <hc:DrawerMenu.Menu>
+                    <Border
+                        Width="300"
+                        Background="Gray"
+                        BorderThickness="0,1,0,0">
+                        <Grid>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="Auto" />
+                                <RowDefinition />
+                            </Grid.RowDefinitions>
+                            <TextBlock
+                                Margin="10,0,0,0"
+                                HorizontalAlignment="Left"
+                                Text="Header" />
+                        </Grid>
+                    </Border>
+                </hc:DrawerMenu.Menu>
+
+                <Border Background="Red" />
+
             </hc:DrawerMenu>
+
             <!--<ToggleButton
                 Width="100"
                 Height="100"
@@ -40,4 +46,15 @@
         </hc:SimplePanel>
 
     </Grid>
+
+    <!--<Grid Margin="5">
+        <Grid.RowDefinitions>
+            <RowDefinition></RowDefinition>
+            <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition Height="Auto"></RowDefinition>
+        </Grid.RowDefinitions>
+        <Rectangle Name="rect" MouseMove="MouseMoved" Fill="LightBlue" ></Rectangle>
+        <Button Grid.Row="1" Name="cmdCapture" Click="cmdCapture_Click">Capture the Mouse</Button>
+        <TextBlock Name="lblInfo" Grid.Row="2"></TextBlock>
+    </Grid>-->
 </Window>
